<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".SignupActivity">

        <TextView
            android:id="@+id/textViewSignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/circular_std"
            android:text="@string/signup_title"
            android:textColor="@color/textColor"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewSignup">

            <EditText
                android:id="@+id/editTextSignupName"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/rectangleColor"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/name_text"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/grayTextColor"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/editTextSignupEmail"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="8dp"
                android:background="@color/rectangleColor"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/email_text"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/grayTextColor"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/editTextSignupPassword"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="8dp"
                android:background="@color/rectangleColor"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/grayTextColor"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/textViewtoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/circular_std"
                android:text="@string/signup_to_login"
                android:textAlignment="viewEnd"
                android:textColor="@color/textColor"
                android:textSize="19sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonSignup"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="32dp"
                android:text="@string/signup_button"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:cornerRadius="30dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
