<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".ForgotPasswordActivity">

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/circular_std"
            android:text="@string/forgot_password_title"
            android:textColor="@color/textColor"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewForgotPassword">

            <EditText
                android:id="@+id/editTextForgotMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/backgroundColor"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:text="@string/forgot_password_description"
                android:textColor="@color/textColor"
                android:textSize="19sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextForgotEmail"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="20dp"
                android:background="@color/rectangleColor"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/email_text"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/grayTextColor" />

            <Button
                android:id="@+id/buttonEmailSend"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="70dp"
                android:text="@string/forgot_password_button"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:cornerRadius="30dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
