<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BagFragment"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/textViewBag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/circular_std"
        android:text="@string/bag_title"
        android:textColor="@color/textColor"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cardRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        app:layout_constraintBottom_toTopOf="@id/bottomCardLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewBag">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/bottomCardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bag_total_amount_text"
                android:textColor="@color/grayTextColor"
                android:textSize="19sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:text="$124"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonCheckBag"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="29dp"
            android:text="@string/bag_button"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:cornerRadius="30dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>