<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopFragment"
    android:background="@color/backgroundColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CategoriesActivity"
        android:background="@color/backgroundColor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/shopLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="50dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/categoriesFragmentRV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textViewCategories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/circular_std"
                    android:text="@string/shop_title"
                    android:textAlignment="textStart"
                    android:textColor="@color/textColor"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttontoMain"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="27dp"
                    android:text="@string/shop_button"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    app:cornerRadius="30dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/shop_subtitle"
                    android:textColor="@color/grayTextColor"
                    android:textSize="19sp" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoriesFragmentRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shopLinearLayout">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>